--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,24 @@
-import sys
+name: Run Python Script
 
-number=int(sys.argv[1])
+on:
+  push:
+    branches:
+      - main
+  pull_request:
 
-for i in range(1, number+1):
-    if number%i==0:
-        print(i,end=" ")
-        
-print()
+jobs:
+  run_python_script:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+
+      - name: Run Python script
+        run: python3 script.py 12  # script.py 파일 실행
+
